# LabCppRobotz

./: .gitignore  CMakeLists.txt  README.md  build.py  lab_robotz.pyd  main.cpp  make.bat  pyproject.toml
doc/: CONFIG_INSTRUCTIONS.md  DEPENDENCIES.md  LINKS.md  TUTORIAL_MSYS2.md
src/: build_tools.cpp  lab_robotz.pyi  main.py
